MobTalkerScript/src/mobtalkerscript/mts/v2/compiler/antlr/MtsParser.java
// Generated from Mts.g4 by ANTLR 4.1
package mobtalkerscript.mts.v2.compiler.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MtsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, LOCAL=2, FUNCTION=3, LABEL=4, JUMP=5, CALL=6, RETURN=7, END=8, DO=9, 
		IF=10, THEN=11, ELSEIF=12, ELSE=13, WHILE=14, BREAK=15, REPEAT=16, UNTIL=17, 
		FOR=18, IN=19, CMD_SAY=20, CMD_SHOW=21, CMD_AT=22, CMD_OFFSET=23, CMD_WITH=24, 
		CMD_SCENE=25, CMD_AS=26, CMD_HIDE=27, CMD_MENU=28, CMD_OPTION=29, LABEL_KEY=30, 
		LPAREN=31, RPAREN=32, LBRACE=33, RBRACE=34, LBRACK=35, RBRACK=36, SEMI=37, 
		COMMA=38, DOT=39, ASSIGN=40, GT=41, LT=42, NOT=43, COLON=44, EQUAL=45, 
		LE=46, GE=47, NOTEQUAL=48, AND=49, OR=50, INC=51, DEC=52, ADD=53, SUB=54, 
		MUL=55, DIV=56, MOD=57, POW=58, STR_CONCAT=59, TBL_APPEND=60, SIZEOF=61, 
		ADD_ASSIGN=62, SUB_ASSIGN=63, MUL_ASSIGN=64, DIV_ASSIGN=65, MOD_ASSIGN=66, 
		POW_ASSIGN=67, CONCAT_ASSIGN=68, LineComment=69, BlockComment=70, Identifier=71, 
		NULL=72, BOOLEAN=73, NORMALSTRING=74, LONGSTRING=75, INTEGER=76, FLOAT=77, 
		HEXINTEGER=78, HEXFLOAT=79;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'local'", "'function'", "'label'", "'jump'", "'call'", 
		"'return'", "'end'", "'do'", "'if'", "'then'", "'else if'", "'else'", 
		"'while'", "'break'", "'repeat'", "'until'", "'for'", "'in'", "'say'", 
		"'show'", "'at'", "'offset'", "'with'", "'scene'", "'as'", "'hide'", "'menu'", 
		"'option'", "'::'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
		"'.'", "'='", "'>'", "'<'", "'not'", "':'", "'=='", "'<='", "'>='", "'!='", 
		"'and'", "'or'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", 
		"'..'", "'[]'", "'#'", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", 
		"'.='", "LineComment", "BlockComment", "Identifier", "'nil'", "BOOLEAN", 
		"NORMALSTRING", "LONGSTRING", "INTEGER", "FLOAT", "HEXINTEGER", "HEXFLOAT"
	};
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_stmt = 2, RULE_expr = 3, RULE_assignExpr = 4, 
		RULE_varExpr = 5, RULE_varSuffix = 6, RULE_varOrExpr = 7, RULE_varAccess = 8, 
		RULE_call = 9, RULE_callArgs = 10, RULE_fieldAccess = 11, RULE_tableCtor = 12, 
		RULE_fieldDef = 13, RULE_elseIfBody = 14, RULE_elseBody = 15, RULE_numericForControl = 16, 
		RULE_genericForControl = 17, RULE_funcName = 18, RULE_funcBody = 19, RULE_nameList = 20, 
		RULE_paramList = 21, RULE_exprList = 22, RULE_varExprList = 23, RULE_fieldDefList = 24;
	public static final String[] ruleNames = {
		"chunk", "block", "stmt", "expr", "assignExpr", "varExpr", "varSuffix", 
		"varOrExpr", "varAccess", "call", "callArgs", "fieldAccess", "tableCtor", 
		"fieldDef", "elseIfBody", "elseBody", "numericForControl", "genericForControl", 
		"funcName", "funcBody", "nameList", "paramList", "exprList", "varExprList", 
		"fieldDefList"
	};

	@Override
	public String getGrammarFileName() { return "Mts.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MtsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ChunkContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MtsParser.EOF, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); block();
			setState(51); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LOCAL) | (1L << FUNCTION) | (1L << RETURN) | (1L << DO) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << REPEAT) | (1L << FOR) | (1L << LABEL_KEY) | (1L << LPAREN) | (1L << SEMI))) != 0) || _la==Identifier) {
				{
				{
				setState(53); stmt();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlankStmtContext extends StmtContext {
		public BlankStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitBlankStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NestedBlockContext extends StmtContext {
		public BlockContext Block;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NestedBlockContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitNestedBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileLoopContext extends StmtContext {
		public ExprContext Condition;
		public BlockContext Block;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileLoopContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitWhileLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LocalVarDeclrStmtContext extends StmtContext {
		public NameListContext NameList;
		public ExprListContext ExprList;
		public NameListContext nameList() {
			return getRuleContext(NameListContext.class,0);
		}
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public LocalVarDeclrStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitLocalVarDeclrStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BreakStmtContext extends StmtContext {
		public BreakStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitBreakStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GenericForLoopContext extends StmtContext {
		public GenericForControlContext Control;
		public BlockContext Block;
		public GenericForControlContext genericForControl() {
			return getRuleContext(GenericForControlContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public GenericForLoopContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitGenericForLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnStmtContext extends StmtContext {
		public ExprListContext ExprList;
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public ReturnStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LabelStmtContext extends StmtContext {
		public Token Name;
		public TerminalNode Identifier() { return getToken(MtsParser.Identifier, 0); }
		public LabelStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitLabelStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignmentStmtContext extends StmtContext {
		public AssignExprContext assignExpr() {
			return getRuleContext(AssignExprContext.class,0);
		}
		public AssignmentStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitAssignmentStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LocalFuncDeclrStmtContext extends StmtContext {
		public Token Name;
		public FuncBodyContext Body;
		public TerminalNode Identifier() { return getToken(MtsParser.Identifier, 0); }
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public LocalFuncDeclrStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitLocalFuncDeclrStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfThenElseContext extends StmtContext {
		public ExprContext Condition;
		public BlockContext Block;
		public ElseIfBodyContext elseIfBody;
		public List<ElseIfBodyContext> ElseIfs = new ArrayList<ElseIfBodyContext>();
		public ElseBodyContext Else;
		public List<ElseIfBodyContext> elseIfBody() {
			return getRuleContexts(ElseIfBodyContext.class);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ElseIfBodyContext elseIfBody(int i) {
			return getRuleContext(ElseIfBodyContext.class,i);
		}
		public ElseBodyContext elseBody() {
			return getRuleContext(ElseBodyContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfThenElseContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitIfThenElse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RepeatLoopContext extends StmtContext {
		public BlockContext Block;
		public ExprContext Condition;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public RepeatLoopContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitRepeatLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CallStmtContext extends StmtContext {
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public CallStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitCallStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumericForLoopContext extends StmtContext {
		public NumericForControlContext Control;
		public BlockContext Block;
		public NumericForControlContext numericForControl() {
			return getRuleContext(NumericForControlContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NumericForLoopContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitNumericForLoop(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncDeclrStmtContext extends StmtContext {
		public FuncNameContext Name;
		public FuncBodyContext Body;
		public FuncNameContext funcName() {
			return getRuleContext(FuncNameContext.class,0);
		}
		public FuncBodyContext funcBody() {
			return getRuleContext(FuncBodyContext.class,0);
		}
		public FuncDeclrStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MtsVisitor ) return ((MtsVisitor<? extends T>)visitor).visitFuncDeclrStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		int _la;
		try {
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new BlankStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(59); match(SEMI);
				}
				break;

			case 2:
				_localctx = new AssignmentStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(60); assignExpr();
				setState(61); match(SEMI);
				}
				break;

			case 3:
				_localctx = new LocalVarDeclrStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(63); match(LOCAL);
				setState(64); ((LocalVarDeclrStmtContext)_localctx).NameList = nameList();
				setState(67);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(65); match(ASSIGN);
					setState(66); ((LocalVarDeclrStmtContext)_localctx).ExprList = exprList();
					}
				}

				}
				break;

			case 4:
				_localctx = new CallStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(69); call();
				setState(70); match(SEMI);
				}
				break;

			case 5:
				_localctx = new LabelStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(72); match(LABEL_KEY);
				setState(73); ((LabelStmtContext)_localctx).Name = match(Identifier);
				setState(74); match(LABEL_KEY);
				}
				break;

			case 6:
				_localctx = new BreakStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(75); match(BREAK);
				setState(76); match(SEMI);
				}
				break;

			case 7:
				_localctx = new ReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(77); match(RETURN);
				setState(79);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << LPAREN) | (1L << LBRACE) | (1L << NOT) | (1L << SUB) | (1L << SIZEOF))) != 0) || ((((_la - 71)) & ~0x3f) == 0 && ((1L << (_la - 71)) & ((1L << (Identifier - 71)) | (1L << (NULL - 71)) | (1L << (BOOLEAN - 71)) | (1L << (NORMALSTRING - 71)) | (1L << (LONGSTRING - 71)) | (1L << (INTEGER - 71)) | (1L << (FLOAT - 71)) | (1L << (HEXINTEGER - 71)) | (1L << (HEXFLOAT - 71)))) != 0)) {
					{
					setState(78); ((ReturnStmtContext)_localctx).ExprList = exprList();
					}
				}

				setState(81); match(SEMI);
				}
				break;

			case 8:
				_localctx = new NestedBlockContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(82); match(DO);
				setState(83); ((NestedBlockContext)_localctx).Block = block();
				setState(84); match(END);
				}
				break;

			case 9:
				_localctx = new WhileLoopContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(86); match(WHILE);
				setState(87); ((WhileLoopContext)_localctx).Condition = expr(0);
				setState(88); match(DO);
				setState(89); ((WhileLoopContext)_localctx).Block = block();
				setState(90); match(END);
				}
				break;

			case 10:
				_localctx = new RepeatLoopContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(92); match(REPEAT);
				setState(93); ((RepeatLoopContext)_localctx).Block = block();
				setState(94); match(UNTIL);
				setState(95); ((RepeatLoopContext)_localctx).Condition = expr(0);
				setState(96); match(SEMI);
				}
				break;

			case 11:
				_localctx = new IfThenElseContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(98); match(IF);
				setState(99); ((IfThenElseContext)_localctx).Condition = expr(0);
				setState(100); match(THEN);
				setState(101); ((IfThenElseContext)_localctx).Block = block();
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ELSEIF) {
					{
					{
					setState(102); ((IfThenElseContext)_localctx).elseIfBody = elseIfBody();
					((IfThenElseContext)_localctx).ElseIfs.add(((IfThenElseContext)_localctx).elseIfBody);
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				switch (_input.LA(1)) {
				case ELSE:
					{
					setState(108); ((IfThenElseContext)_localctx).Else = elseBody();
					}
					break;
				case END:
					{
					setState(109); match(END);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;

			case 12:
				_localctx = new NumericForLoopContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(112); match(FOR);
				setState(113); ((NumericForLoopContext)_localctx).Control = numericForControl();
				setState(114); match(DO);
				setState(115); ((NumericForLoopContext)_localctx).Block = block();
				setState(116); match(END);
				}
				break;

			case 13:
				_localctx = new GenericForLoopContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(118); match(FOR);
				setState(119); ((GenericForLoopContext)_localctx).Control = genericForControl();
				setState(120); match(DO);
				setState(121); ((GenericForLoopContext)_localctx).Block = block();
				setState(122); match(END);
				}
				break;

			case 14:
				_localctx = new FuncDeclrStmtContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(124); match(FUNCTION);
				setState(125); ((FuncDeclrStmtContext)_localctx).Name = funcName();
				setState(126); ((FuncDeclrStmtContext)_localctx).Body = funcBody();
				}
				break;

			case 15:
				_localctx = new LocalFuncDeclrStmtContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(128); match(LOCAL);
				setState(129); match(FUNCTION);
				setState(130); ((LocalFuncDeclrStmtContext)_localctx).Name = match(Identifier);
				setState(131); ((LocalFuncDeclrStmtContext)_localctx).Body = funcBody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
